--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     height: 200px;
     padding: 20px;
     margin: 20px;
-    border: 2px solid #34db7f;
+    border: 2px solid #bcdb34;
     border-radius: 50%;
     background-color: #ecf0f1;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
