--- a/class_id_style.css
+++ b/class_id_style.css
@@ -4,6 +4,10 @@
     font-size: 2.5em;
     text-align: center;
 }
+/* centrar los bloques */
+.centrado {
+    
+}
 
 /* Estilos comunes para los párrafos con clase 'texto' */
 .texto {
