--- a/class_id_style.css
+++ b/class_id_style.css
@@ -1,5 +1,6 @@
 /* Estilos para el id del título */
 #titulo {
+    display: flex;
     color: #2E8B57;
     font-size: 2.5em;
     text-align: center;
